	'timed' 0 to swap previous <> current channel, first channel of a group can't be 0 (1000,2000 etc) anymore
	Added global server setting (default = 1, act as before. 0 = set for every channel server address)
	Added option to select how TXT start, 50/50 txt/tv or 100% txt
	Retry url after 30 sec in case of error (can be switched off, interval can be set in settings.js)
	


0.25	Get recordings from Streamdev, Restfulapi or SmartTVweb.
	Check if SmartTVweb is on the server if not turn SmartTVweb options off
	Check if Restfulapi is on the server if not turn Restfulapi options off
	Streamdev can also do Rewind, pause, Fastforward.
	Added German translation (Google Translate) so it must be corrected.
	Fixed in GuideView the functionkey information. (After pressing Yellow, Back it wasn't right)
	Duration of recording is show in Recordings list.
	In recordings listing there is an other sublevel for directories, (use subgroup_old = 0 for old version)
	In recordings listing, first sub directory is shown in Header
	Removed some old, not in use, code for recordings listings and direct local recording
	Better support for local recordings, (only 1 local recording is possible)
	<Menu><2> local timers show also local recordings, <OK> or <PLAY> to play.
	Removal of local recordings now possible
	Localrecordings support FF/REW but also the jump in time with 1/4/7 and 3/6/9
	Local recordings time is corrected when watching a local recording. Overview shows epg duration. 
	Changed the color of the infowindow to 'Green' // Infowindow is now 'Red' in case of error, warning or if User attention is needed.
	To stop local recording goto timer menu press stop button.
	<Blue> button gives more info about a (local) timer
	Updated view of local timers, to match more the server timer menu layout.


0.24	vip.getmarks used for selecting getmarks 0 = restfulapi, 1 = SmartTVWeb (not all users have the newest SmartTVWeb)
	Channels update.