@@ -2,7 +2,7 @@
 // Default settings
 // 
 
-var Version = "0.26.14";
+var Version = "0.26.15";
 
 server_ip_array = new Array("http://192.168.1.15","http://192.168.3.15","http://192.168.178.56","http://192.168.3.100","http://192.168.178.19","http://192.168.1.21","http://192.168.2.100","http://192.168.3.225");
 
@@ -17,6 +17,11 @@ var Global_Multicast = 0;// 1 = use only MultiCast
 var txtfull_screen = 1;// 0 = 50/50 % txt/tv, 1 = 100% txt
 var KeepTrying = 1;//No display of error, but keep trying to restart the stream 
 var TryingInterval = 30 * 1000; // 30 Seconds.
+var Cron_Action = 1; //0= off, 1 = box turns standby, 2 switch to preset channel
+var Cron_reload = 0; // if set reload script at cron_hour / cron_min -1
+var Cron_switch_channel = 9051; //Channel to switch to
+var Cron_hour = 05;// Hour for cron job
+var Cron_min = 00; // Minute for cron job
 
 OSDLang = new Array ("English", "Nederlands", "Deutsch");
 langfile = new Array ("languages/lang_eng.js", "languages/lang_dut.js","languages/lang_ger.js");
